; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_tdma.c_mv_cesa_dma_add_dummy_end.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_tdma.c_mv_cesa_dma_add_dummy_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv_cesa_tdma_chain = type { i32 }
%struct.mv_cesa_tdma_desc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mv_cesa_dma_add_dummy_end(%struct.mv_cesa_tdma_chain* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mv_cesa_tdma_chain*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mv_cesa_tdma_desc*, align 8
  store %struct.mv_cesa_tdma_chain* %0, %struct.mv_cesa_tdma_chain** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.mv_cesa_tdma_chain*, %struct.mv_cesa_tdma_chain** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.mv_cesa_tdma_desc* @mv_cesa_dma_add_desc(%struct.mv_cesa_tdma_chain* %7, i32 %8)
  store %struct.mv_cesa_tdma_desc* %9, %struct.mv_cesa_tdma_desc** %6, align 8
  %10 = load %struct.mv_cesa_tdma_desc*, %struct.mv_cesa_tdma_desc** %6, align 8
  %11 = call i64 @IS_ERR(%struct.mv_cesa_tdma_desc* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.mv_cesa_tdma_desc*, %struct.mv_cesa_tdma_desc** %6, align 8
  %15 = call i32 @PTR_ERR(%struct.mv_cesa_tdma_desc* %14)
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = call i32 @BIT(i32 31)
  %18 = call i32 @cpu_to_le32(i32 %17)
  %19 = load %struct.mv_cesa_tdma_desc*, %struct.mv_cesa_tdma_desc** %6, align 8
  %20 = getelementptr inbounds %struct.mv_cesa_tdma_desc, %struct.mv_cesa_tdma_desc* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %13
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local %struct.mv_cesa_tdma_desc* @mv_cesa_dma_add_desc(%struct.mv_cesa_tdma_chain*, i32) #1

declare dso_local i64 @IS_ERR(%struct.mv_cesa_tdma_desc*) #1

declare dso_local i32 @PTR_ERR(%struct.mv_cesa_tdma_desc*) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
